# VentControl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blink.c  blink.h  connections.c  connections.h  lwipopts.h  main.c  server.c  server.h  types.h  ventcontrol.c  ventcontrol.h
firmware/: CMakeLists.txt
firmware/src/: input.c  input.h  main.c  server.c  server.h  types.h  ventcontrol.c
firmwareTest/FirmwareTest/: FirmwareTest.sln
firmwareTest/FirmwareTest/FirmwareTest/: FirmwareTest.Designer.cs  FirmwareTest.cs  FirmwareTest.csproj  Program.cs
firmwareTest/FirmwareTest/FirmwareTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
pcb/Ventilator/: Input.kicad_sch  Output.kicad_sch  Power.kicad_sch  Power.kicad_sym  Ventilator.csv  Ventilator.kicad_pcb  Ventilator.kicad_prl  Ventilator.kicad_pro  Ventilator.kicad_sch  Ventilator.kicad_sch-bak  Ventilator.xml  cpu.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/Ventilator/IM06GR-Relais/: 2023-01-29_17-38-59.lib
pcb/Ventilator/IM06GR-Relais/footprints.pretty/: IM06GR.kicad_mod
pcb/Ventilator/R-78AA3.3-1.0SMD/: CONV_R-78AA3.3-1.0SMD.kicad_mod  R-78AA3.3-1.0SMD.lib  R-78AA3.3-1.0SMD.step
pcb/Ventilator/W5500/: WIZ850IO.kicad_mod  WIZ850IO.kicad_sym
